Add app skeleton and Validate feature

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "nextjs",
+  "name": "multisig-signer",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "author": "codyx",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,11 +10,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.17",
+    "@chakra-ui/react": "^2.4.9",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@next/font": "13.1.2",
-    "eslint": "8.31.0",
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.27",
+    "@types/react-dom": "18.0.10",
+    "@usedapp/core": "^1.2.2",
+    "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
+    "ethers": "^5.7.2",
+    "framer-motion": "^8.5.0",
     "next": "13.1.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.42.1",
+    "typescript": "4.9.4"
   }
 }
