Add Validate feature

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_MAINNET_PROVIDER="https://mainnet.infura.io/v3/YOUR_API_KEY"
+NEXT_PUBLIC_MAINNET_PROVIDER="https://mainnet.infura.io/v3/931d4c1f23114993a7f4eeac8a7922fb"
+NEXT_PUBLIC_INFURA_ID="d8df2cb7844e4a54ab0a782f608749dd"
