--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "@usedapp/core": "^1.2.2",
+    "@vercel/analytics": "^0.1.8",
     "@walletconnect/web3-provider": "^1.8.0",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
